--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ version = "0.1.0"
 clap = "2.23.3"
 csv = "0.15.0"
 json = "0.11.6"
+slog = "2.0.2"
+slog-async = "2.0.1"
+slog-stdlog = "2.0.0-3.0"
+slog-term = "2.0.0-4.0"
