--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 clap = "2.23.3"
-csv = "0.15.0"
+csv = "1.0.0-beta.1"
 json = "0.11.6"
 slog = "2.0.2"
 slog-async = "2.0.1"
